--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,27 @@
-@fancy-color: tomato;
+@import "normalize.less";
+@import "mixins.less";
+@import "outlines.less";
+@import "variables.less";
+@import "mixins.less";
+@import "scaffolding.less";
+@import "blocks/main-nav.less";
+@import "blocks/page-header.less";
+@import "blocks/stats.less";
 
-body {color: @fancy-color;}
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+    position: absolute;
+
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
