Добавили и подключили локальные шрифты

--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -1,3 +1,18 @@
+//@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic-ext');
+@font-face {
+    font-weight: normal;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-style: normal;
+    src: url("../fonts/PTSansNarrow-Regular.ttf");
+}
+
+@font-face {
+    font-weight: bold;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-style: normal;
+    src: url("../fonts/PTSansNarrow-Bold.ttf");
+}
+
 body {
     min-width: 320px;
     margin: 0;
@@ -5,7 +20,7 @@ body {
 
     font-size: 18px;
     line-height: 27px;
-    font-family: "Arial", sans-serif;
+    font-family: "PT Sans Narrow", "Arial", sans-serif;
     color: #f7f4f1;
     font-style: normal;
 
