доверстал адаптивную шапку

--- a/less/outlines.less
+++ b/less/outlines.less
@@ -1,16 +1,16 @@
 body {
-    background: @bg-darkgrey url("../img/bb-mobile.png") no-repeat 50% 0;
+//    background: @bg-darkgrey url("../img/bb-mobile.png") no-repeat 50% 0;
     background-size: 720px auto;
     min-height: 750px;
 }
 
 @media (min-width: @tablet-width) {
-    background: @bg-darkgrey url("../img/bb-tablet.png") no-repeat 50% 0;
+//    background: @bg-darkgrey url("../img/bb-tablet.png") no-repeat 50% 0;
     background-size: 1178px auto;
 }
 
 @media (min-width: @desktop-width) {
-    background: @bg-darkgrey url("../img/bb-desktop.png") no-repeat 50% 0;
+//    background: @bg-darkgrey url("../img/bb-desktop.png") no-repeat 50% 0;
     background-size: 1391px auto;
 }
 
