--- a/less/style.less
+++ b/less/style.less
@@ -5,23 +5,7 @@
 @import "mixins.less";
 @import "scaffolding.less";
 @import "blocks/main-nav.less";
+@import "blocks/site-list";
+@import "blocks/user-list.less";
 @import "blocks/page-header.less";
 @import "blocks/stats.less";
-
-.visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
-    position: absolute;
-
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
