Добавлена Резиновая верстка

--- a/less/blocks/site-list.less
+++ b/less/blocks/site-list.less
@@ -36,6 +36,8 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
+        flex-grow: 1;
+
         width: 570px;
         //min-height: 70px;
     }
