--- a/less/blocks/stats.less
+++ b/less/blocks/stats.less
@@ -1,6 +1,7 @@
 .stats {
-    width: 320px;
-    margin: 0 auto;
+    width: auto;
+    //width: 320px; - убираем для резины
+    //margin: 0 auto;
 }
 
 .stats__header {
@@ -116,7 +117,10 @@
 
 @media (min-width: @tablet-width) {
     .stats {
-        width: 640px;
+        width: 84%;
+        //max-width: 960px;
+        max-width: 1200px;
+        margin: 0 auto;
         margin-top: -185px;
     }
 
@@ -141,7 +145,8 @@
     }
 
     .stats__slogan {
-        width: 240px;
+        width: 50%; // используем такую ширину чтоб блоки не перемещались в одну строку
+        // width: 240px;
         margin-bottom: 18px;
 
         font-size: 40px;
@@ -150,17 +155,22 @@
         text-transform: none;
     }
 
+    .stats__slogan br {
+        display: none; //прячем перенос на планшетной версии для того чтоб надпись смотрелась красивее
+    }
+
     .stats__intro {
-        width: 210px;
+        width: 37,5%;
         margin-top: 5px;
-        padding-right: 37px;
+        padding: 0;
+        padding-left: 30px;
 
         text-align: left;
     }
 
     .stats__legend--top {
         display: block;
-        width: 240px;
+        width: 50%;
 
         color: rgba(100, 100, 100, 0.3);
     }
@@ -175,7 +185,8 @@
     }
 
     .stats__list tr {
-        width: 250px;
+        width: 50%;
+        box-sizing: border-box;
         padding: 25px 35px;
         padding-bottom: 28px;
     }
@@ -207,12 +218,14 @@
 @media (min-width: @desktop-width) {
     .stats {
         display: flex;
-        width: 960px;
+        //width: 960px;
         margin-top: -160px;
     }
 
     .stats__header {
-        display: block;
+        //display: block;
+        flex-grow: 1;
+        flex-direction: column;
         width: 240px;
 
         &::before {
@@ -232,14 +245,17 @@
         width: auto;
         margin-bottom: 32px;
         margin-right: 30px;
+        padding-left: 0;
     }
 
     .stats__legend--top {
         width: auto;
+        margin-top: auto;
     }
 
     .stats__list {
         display: flex;
+        flex-grow: 1;
         width: 640px; // или задаем ширину этого контейнера
     }
 }
