--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -28,6 +28,11 @@
         background-image: url("../img/bg-header.jpg");
         background-repeat: no-repeat;
         background-position: center -9px;
+
+        @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+            background-image: url("../img/bg-header2x.jpg");
+            background-size: 1338px auto;
+        }
     }
 
     .page-header__logo img {
