шрифты заменены на формат woff2

--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -3,14 +3,14 @@
     font-weight: normal;
     font-family: 'PT Sans Narrow', sans-serif;
     font-style: normal;
-    src: url("../fonts/PTSansNarrow-Regular.ttf");
+    src: url("../fonts/PTSansNarrow-Regular.woff2");
 }
 
 @font-face {
     font-weight: bold;
     font-family: 'PT Sans Narrow', sans-serif;
     font-style: normal;
-    src: url("../fonts/PTSansNarrow-Bold.ttf");
+    src: url("../fonts/PTSansNarrow-Bold.woff2");
 }
 
 body {
