подключен uglify u htmlmin

--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,15 +1,21 @@
 //@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic-ext');
 @font-face {
-    font-weight: normal;
     font-family: 'PT Sans Narrow', sans-serif;
+
+    font-weight: normal;
     font-style: normal;
+    font-display: swap;
+
     src: url("../fonts/PTSansNarrow-Regular.woff2");
 }
 
 @font-face {
-    font-weight: bold;
     font-family: 'PT Sans Narrow', sans-serif;
+    
+    font-weight: bold;
     font-style: normal;
+    font-display: swap;
+
     src: url("../fonts/PTSansNarrow-Bold.woff2");
 }
 
